--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -27,7 +27,7 @@ suhosin.session.cryptua = off
 extension=xsl.so
 extension=intl.so
 extension=zip.so
-
+extension=redis.so
 extension=gd.so
 
 upload_max_filesize = 10M
